# simpic

./: .gitignore  CMakeLists.txt  readme.md
include/: instructions.hpp  pic10f200.hpp  types.hpp
src/: instructions.cpp  main.cpp  pic10f200.cpp
